terraform/httproute-v1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: juice-shop-route
spec:
  parentRefs:
    - name: juice-shop-gateway
  rules:
    - backendRefs:
        - name: juice-shop-v1
          kind: Service
          port: 80
